fix margin on small screens

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ img{
     }
 
     .card{
+        margin-left: 0;
         margin-top: 2rem;
         width: 90%;
     }
